# StudyCafes

./: azure-pipelines.yml  package-lock.json
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  cafe-data.service.spec.ts  cafe-data.service.ts
frontend/src/app/cafe-card/: cafe-card.component.css  cafe-card.component.html  cafe-card.component.spec.ts  cafe-card.component.ts
frontend/src/app/cafe-full-card/: cafe-full-card.component.html  cafe-full-card.component.spec.ts  cafe-full-card.component.ts
frontend/src/app/cafe-list/: cafe-list.component.css  cafe-list.component.html  cafe-list.component.spec.ts  cafe-list.component.ts
frontend/src/app/cafe-review-form/: cafe-review-form.component.html  cafe-review-form.component.spec.ts  cafe-review-form.component.ts
frontend/src/app/cafe-thumbnail-card/: cafe-thumbnail-card.component.css  cafe-thumbnail-card.component.html  cafe-thumbnail-card.component.spec.ts  cafe-thumbnail-card.component.ts
frontend/src/app/cafes-list-popup/: cafes-list-popup.component.css  cafes-list-popup.component.html  cafes-list-popup.component.spec.ts  cafes-list-popup.component.ts
frontend/src/app/search-bar/: search-bar.component.css  (+2 more)
manifests/: deployment.yml  service.yml
svelte-app/: package-lock.json  package.json
(+4 files in other folders)
