[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = "1.0.188"
futures = "0.3.28"
futures-util = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}

[dependencies.mongodb]
version = "2.7.1"
features = ["tokio-runtime"]